fix: tweaked spacing issue with h1

--- a/blog-preview-card/index.css
+++ b/blog-preview-card/index.css
@@ -52,11 +52,13 @@ span {
   font-weight: 500;
   font-size: 14px;
   margin-bottom: 12px;
+  margin-top: 5px;
 }
 
 h1 {
   margin-block: 0;
-  margin-bottom: 14px;
+  margin-top: 12px;
+  margin-bottom: 12px;
   font-size: 24px;
 }
 
